added favicon and picture description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Beezus | Freelance photographer</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Andika+New+Basic:wght@400;700&display=swap" rel="stylesheet">
@@ -20,6 +27,10 @@
             box-sizing: border-box;
         }
 
+        html {
+            height: 100%;
+        }
+
         body {
             margin: 0;
             background-color: black;
@@ -34,9 +45,10 @@
             padding: 0 32px 0 32px;
             position: absolute;
             top: 0;
-            z-index: 1;
+            z-index: 20;
             width: 100%;
             margin-top: 16px;
+            user-select: none;
         }
 
         .header-left {
@@ -414,7 +426,7 @@
                 left: 0;
                 right: 0;
                 width: fit-content;
-                bottom: 64px;
+                bottom: 120px;
             }
         }
 
@@ -467,10 +479,10 @@
             <img src="TOP1.JPG" alt="" class="picture0 picture">
             <button class="pictureDescription hidden hiddenForce">
                 <div class="pictureYear">
-                    2020
+                    2017
                 </div>
                 <div class="pictureSpecs">
-                    EOS 1832, 70x800, ISO 9000
+                    EOS 1000D, f/10, 1/80s, 300mm, ISO 400
                 </div>
                 <div class="pictureLocation">
                     <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
@@ -483,10 +495,10 @@
             <img src="TOP2.JPG" alt="" class="picture1 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
-                    2020
+                    2019
                 </div>
                 <div class="pictureSpecs">
-                    EOS 1832, 70x800, ISO 9000
+                    EOS 1000D, f/10, 1/1000s, 110mm, ISO 400
                 </div>
                 <div class="pictureLocation">
                     <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
@@ -499,10 +511,10 @@
             <img src="TOP3.JPG" alt="" class="picture2 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
-                    2020
+                    2014
                 </div>
                 <div class="pictureSpecs">
-                    EOS 1832, 70x800, ISO 9000
+                    EOS 1000D, f/7.1, 1/250s, 140mm, ISO 200
                 </div>
                 <div class="pictureLocation">
                     <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
@@ -515,10 +527,10 @@
             <img src="TOP4.JPG" alt="" class="picture3 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
-                    2020
+                    2014
                 </div>
                 <div class="pictureSpecs">
-                    EOS 1832, 70x800, ISO 9000
+                    EOS 1000D, f/5.6, 1/250s, 205mm, ISO 200
                 </div>
                 <div class="pictureLocation">
                     <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
@@ -531,10 +543,10 @@
             <img src="TOP5.JPG" alt="" class="picture4 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
-                    2020
+                    2014
                 </div>
                 <div class="pictureSpecs">
-                    EOS 1832, 70x800, ISO 9000
+                    EOS 1000D, f/8, 1/400s, 160mm, ISO 200
                 </div>
                 <div class="pictureLocation">
                     <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
@@ -547,10 +559,10 @@
             <img src="TOP6.JPG" alt="" class="picture5 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
-                    2020
+                    2019
                 </div>
                 <div class="pictureSpecs">
-                    EOS 1832, 70x800, ISO 9000
+                    EOS 1000D, f/10, 1/160s, 400mm, ISO 400
                 </div>
                 <div class="pictureLocation">
                     <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
@@ -563,10 +575,10 @@
             <img src="TOP7.JPG" alt="" class="picture6 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
-                    2020
+                    2014
                 </div>
                 <div class="pictureSpecs">
-                    EOS 1832, 70x800, ISO 9000
+                    EOS 1000D, f/7.1, 1/500s, 260mm, ISO 125
                 </div>
                 <div class="pictureLocation">
                     <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
@@ -579,10 +591,10 @@
             <img src="TOP8.JPG" alt="" class="picture7 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
-                    2020
+                    2019
                 </div>
                 <div class="pictureSpecs">
-                    EOS 1832, 70x800, ISO 9000
+                    EOS 1000D, f/6.3, 1/200s, 180mm, ISO 400
                 </div>
                 <div class="pictureLocation">
                     <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
@@ -595,10 +607,10 @@
             <img src="TOP9.JPG" alt="" class="picture8 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
-                    2020
+                    2017
                 </div>
                 <div class="pictureSpecs">
-                    EOS 1832, 70x800, ISO 9000
+                    EOS 1000D, f/8, 1/500s, 300mm, ISO 125
                 </div>
                 <div class="pictureLocation">
                     <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
@@ -611,10 +623,10 @@
             <img src="TOP10.JPG" alt="" class="picture9 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
-                    2020
+                    2019
                 </div>
                 <div class="pictureSpecs">
-                    EOS 1832, 70x800, ISO 9000
+                    EOS 1000D, f/6.4, 1/1580s, 400mm, ISO 1600
                 </div>
                 <div class="pictureLocation">
                     <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
@@ -627,10 +639,10 @@
             <img src="TOP11.JPG" alt="" class="picture10 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
-                    2020
+                    2019
                 </div>
                 <div class="pictureSpecs">
-                    EOS 1832, 70x800, ISO 9000
+                    EOS 1000D, f/10, 1/100s, 300mm, ISO 1600
                 </div>
                 <div class="pictureLocation">
                     <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
@@ -643,10 +655,10 @@
             <img src="TOP12.JPG" alt="" class="picture11 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
-                    2020
+                    2017
                 </div>
                 <div class="pictureSpecs">
-                    EOS 1832, 70x800, ISO 9000
+                    EOS 1000D, f/10, 1/160s, 150mm, ISO 400
                 </div>
                 <div class="pictureLocation">
                     <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
