removed debug paused

--- a/index.html
+++ b/index.html
@@ -694,8 +694,8 @@
             const amountOfPictures = pictureParentSelector.childElementCount
             const msToInterpretClickAsHold = 300
             const timeBetweenPictures = 3000
-            const debugPaused = true
-            // const debugPaused = false
+            // const debugPaused = true
+            const debugPaused = false
             let currentPicture = 0
             let elapsed = 0
             let nextPictureInterval
