changed relative route to images

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
     <button id="nextImageBtn" class="imageControlBtn nextImageBtn"></button>
     <div class="content" id="pictureParent">
         <div id="picture0" class="pictureContainer">
-            <img src="/Pictures/1_xs.JPG" alt="" class="picture0 picture">
+            <img src="blob/main/Pictures/1_xs.JPG" alt="" class="picture0 picture">
             <button class="pictureDescription hidden hiddenForce">
                 <div class="pictureYear">
                     2017
@@ -492,7 +492,7 @@
             </button>
         </div>
         <div id="picture1" class="pictureContainer hidden">
-            <img src="/Pictures/2_xs.JPG" alt="" class="picture1 picture">
+            <img src="blob/main/Pictures/2_xs.JPG" alt="" class="picture1 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
                     2019
@@ -508,7 +508,7 @@
             </div>
         </div>
         <div id="picture2" class="pictureContainer hidden">
-            <img src="/Pictures/3_xs.JPG" alt="" class="picture2 picture">
+            <img src="blob/main/Pictures/3_xs.JPG" alt="" class="picture2 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
                     2014
@@ -524,7 +524,7 @@
             </div>
         </div>
         <div id="picture3" class="pictureContainer hidden">
-            <img src="/Pictures/4_xs.JPG" alt="" class="picture3 picture">
+            <img src="blob/main/Pictures/4_xs.JPG" alt="" class="picture3 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
                     2014
@@ -540,7 +540,7 @@
             </div>
         </div>
         <div id="picture4" class="pictureContainer hidden">
-            <img src="/Pictures/5_xs.JPG" alt="" class="picture4 picture">
+            <img src="blob/main/Pictures/5_xs.JPG" alt="" class="picture4 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
                     2014
@@ -556,7 +556,7 @@
             </div>
         </div>
         <div id="picture5" class="pictureContainer hidden">
-            <img src="/Pictures/6_xs.JPG" alt="" class="picture5 picture">
+            <img src="blob/main/Pictures/6_xs.JPG" alt="" class="picture5 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
                     2019
@@ -572,7 +572,7 @@
             </div>
         </div>
         <div id="picture6" class="pictureContainer hidden">
-            <img src="/Pictures/7_xs.JPG" alt="" class="picture6 picture">
+            <img src="blob/main/Pictures/7_xs.JPG" alt="" class="picture6 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
                     2014
@@ -588,7 +588,7 @@
             </div>
         </div>
         <div id="picture7" class="pictureContainer hidden">
-            <img src="/Pictures/8_xs.JPG" alt="" class="picture7 picture">
+            <img src="blob/main/Pictures/8_xs.JPG" alt="" class="picture7 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
                     2019
@@ -604,7 +604,7 @@
             </div>
         </div>
         <div id="picture8" class="pictureContainer hidden">
-            <img src="/Pictures/9_xs.JPG" alt="" class="picture8 picture">
+            <img src="blob/main/Pictures/9_xs.JPG" alt="" class="picture8 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
                     2017
@@ -620,7 +620,7 @@
             </div>
         </div>
         <div id="picture9" class="pictureContainer hidden">
-            <img src="/Pictures/10_xs.JPG" alt="" class="picture9 picture">
+            <img src="blob/main/Pictures/10_xs.JPG" alt="" class="picture9 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
                     2019
@@ -636,7 +636,7 @@
             </div>
         </div>
         <div id="picture10" class="pictureContainer hidden">
-            <img src="/Pictures/11_xs.JPG" alt="" class="picture10 picture">
+            <img src="blob/main/Pictures/11_xs.JPG" alt="" class="picture10 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
                     2019
@@ -652,7 +652,7 @@
             </div>
         </div>
         <div id="picture11" class="pictureContainer hidden">
-            <img src="/Pictures/12_xs.JPG" alt="" class="picture11 picture">
+            <img src="blob/main/Pictures/12_xs.JPG" alt="" class="picture11 picture">
             <div class="pictureDescription hidden">
                 <div class="pictureYear">
                     2017
