--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="https://github.com/hecmocer-pro/BeezusPhotography/blob/main/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/hecmocer-pro/BeezusPhotography/blob/main/favicon-32x32.png?raw=true">
     <link rel="icon" type="image/png" sizes="16x16" href="https://github.com/hecmocer-pro/BeezusPhotography/blob/main/favicon-16x16.png?raw=true">
-    <link rel="manifest" href="https://github.com/hecmocer-pro/BeezusPhotography/blob/main/site.webmanifest">
+    <link rel="manifest" href='data:application/manifest+json,{"name": "","short_name": "","icons": [{"src": "/android-chrome-192x192.png","sizes": "192x192","type": "image/png"},{"src": "/android-chrome-512x512.png","sizes": "512x512","type": "image/png"}],"theme_color": "#ffffff","background_color": "#ffffff","display": "standalone"}'>
     <link rel="mask-icon" href="https://github.com/hecmocer-pro/BeezusPhotography/blob/main/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
