whoops, deleted time between pictures by accident

--- a/index.html
+++ b/index.html
@@ -692,6 +692,7 @@
 
             const amountOfPictures = pictureParentSelector.childElementCount
             const msToInterpretClickAsHold = 300
+            const timeBetweenPictures = 4000
             // const debugPaused = true
             const debugPaused = false
             let currentPicture = 0
