--- a/index.html
+++ b/index.html
@@ -484,8 +484,8 @@
                     EOS 1000D, f/10, 1/80s, 300mm, ISO 400
                 </div>
                 <div class="pictureLocation">
-                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
-                        Addis Abeba, Ethiopia
+                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Kapama+Private+Game+Reserve/@-24.4003201,30.8794333,10.02z/data=!4m8!3m7!1s0x1ec2fd8d9e479fcf:0xacc1048eebb39cd2!5m2!4m1!1i2!8m2!3d-24.429375!4d31.0134571" target="_blank" rel="noopener">
+                        Kapama Private Game Reserve, Kruger, South Africa
                     </a>
                 </div>
             </button>
@@ -500,8 +500,8 @@
                     EOS 1000D, f/10, 1/1000s, 110mm, ISO 400
                 </div>
                 <div class="pictureLocation">
-                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
-                        Addis Abeba, Ethiopia
+                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Chobe+National+Park/@-18.6156828,24.3213371,10.53z/data=!4m5!3m4!1s0x1950e0a266fc1989:0xaadc0ae563ad43ce!8m2!3d-18.7305642!4d24.4292148" target="_blank" rel="noopener">
+                        Chobe National Park, Botswana
                     </a>
                 </div>
             </div>
@@ -516,8 +516,8 @@
                     EOS 1000D, f/7.1, 1/250s, 140mm, ISO 200
                 </div>
                 <div class="pictureLocation">
-                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
-                        Addis Abeba, Ethiopia
+                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Maasai+Mara+National+Reserve/@-1.27358,34.6416227,9.33z/data=!4m5!3m4!1s0x182ce8a64a31fdb1:0x296a9587e0c3c410!8m2!3d-1.371912!4d34.9381095" target="_blank" rel="noopener">
+                        Maasai Mara National Reserve, Kenya
                     </a>
                 </div>
             </div>
@@ -532,8 +532,8 @@
                     EOS 1000D, f/5.6, 1/250s, 205mm, ISO 200
                 </div>
                 <div class="pictureLocation">
-                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
-                        Addis Abeba, Ethiopia
+                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/28214+Fresnedillas+de+la+Oliva,+Madrid/@40.488057,-4.1843654,13.27z/data=!4m5!3m4!1s0xd41a6a299f1c777:0xf641d8a4a00c27d7!8m2!3d40.4864017!4d-4.1722255" target="_blank" rel="noopener">
+                        Fresnedillas de la Oliva, Madrid, España
                     </a>
                 </div>
             </div>
@@ -548,8 +548,8 @@
                     EOS 1000D, f/8, 1/400s, 160mm, ISO 200
                 </div>
                 <div class="pictureLocation">
-                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
-                        Addis Abeba, Ethiopia
+                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Maasai+Mara+National+Reserve/@-1.27358,34.6416227,9.33z/data=!4m5!3m4!1s0x182ce8a64a31fdb1:0x296a9587e0c3c410!8m2!3d-1.371912!4d34.9381095" target="_blank" rel="noopener">
+                        Maasai Mara National Reserve, Kenya
                     </a>
                 </div>
             </div>
@@ -564,8 +564,8 @@
                     EOS 1000D, f/10, 1/160s, 400mm, ISO 400
                 </div>
                 <div class="pictureLocation">
-                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
-                        Addis Abeba, Ethiopia
+                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Chobe+National+Park/@-18.6156828,24.3213371,10.53z/data=!4m5!3m4!1s0x1950e0a266fc1989:0xaadc0ae563ad43ce!8m2!3d-18.7305642!4d24.4292148" target="_blank" rel="noopener">
+                        Chobe National Park, Botswana
                     </a>
                 </div>
             </div>
@@ -580,8 +580,8 @@
                     EOS 1000D, f/7.1, 1/500s, 260mm, ISO 125
                 </div>
                 <div class="pictureLocation">
-                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
-                        Addis Abeba, Ethiopia
+                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Serengeti+National+Park/@-2.3240219,34.7746544,12.33z/data=!4m5!3m4!1s0x1832cdd680dac6d1:0x2ea157f39deb3945!8m2!3d-2.3333333!4d34.8333333" target="_blank" rel="noopener">
+                        Serengeti National Park, Tanzania
                     </a>
                 </div>
             </div>
@@ -596,8 +596,8 @@
                     EOS 1000D, f/6.3, 1/200s, 180mm, ISO 400
                 </div>
                 <div class="pictureLocation">
-                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
-                        Addis Abeba, Ethiopia
+                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Lalibela,+Ethiopia/@12.0319961,39.0379643,15z/data=!3m1!4b1!4m5!3m4!1s0x16413eee814f2d03:0xf27414e782ae4b62!8m2!3d12.0308987!4d39.0476298" target="_blank" rel="noopener">
+                        Lalibela, Ethiopia
                     </a>
                 </div>
             </div>
@@ -612,8 +612,8 @@
                     EOS 1000D, f/8, 1/500s, 300mm, ISO 125
                 </div>
                 <div class="pictureLocation">
-                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
-                        Addis Abeba, Ethiopia
+                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Walvis+Bay,+Namibia/@-22.9539724,14.4945188,14z/data=!3m1!4b1!4m5!3m4!1s0x1c76ef00d003fbb1:0x7b2b78577c36fede!8m2!3d-22.9584081!4d14.5057511" target="_blank" rel="noopener">
+                        Walvis Bay, Namibia
                     </a>
                 </div>
             </div>
@@ -628,8 +628,8 @@
                     EOS 1000D, f/6.4, 1/1580s, 400mm, ISO 1600
                 </div>
                 <div class="pictureLocation">
-                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
-                        Addis Abeba, Ethiopia
+                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Nacimiento+del+Rio+Ebro/@43.0171653,-4.1937009,15.97z/data=!4m5!3m4!1s0xd48e47e8a37f96f:0xaa3641bcdb81fe75!8m2!3d43.0171737!4d-4.1893993" target="_blank" rel="noopener">
+                        Nacimiento del Rio Ebro, Cantabria, España
                     </a>
                 </div>
             </div>
@@ -644,8 +644,8 @@
                     EOS 1000D, f/10, 1/100s, 300mm, ISO 1600
                 </div>
                 <div class="pictureLocation">
-                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
-                        Addis Abeba, Ethiopia
+                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Bwindi+Impenetrable+Forest/@-1.0387671,29.6689347,12.1z/data=!4m5!3m4!1s0x19de9d58dac3d859:0x972f044d905ac1fa!8m2!3d-1.0521495!4d29.6201006" target="_blank" rel="noopener">
+                        Bwindi Impenetrable Forest, Uganda
                     </a>
                 </div>
             </div>
@@ -660,8 +660,8 @@
                     EOS 1000D, f/10, 1/160s, 150mm, ISO 400
                 </div>
                 <div class="pictureLocation">
-                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Addis+Ababa,+Ethiopia/@8.9633398,38.7081047,12z/data=!3m1!4b1!4m5!3m4!1s0x164b85cef5ab402d:0x8467b6b037a24d49!8m2!3d8.9806034!4d38.7577605" target="_blank" rel="noopener">
-                        Addis Abeba, Ethiopia
+                    <a class="pictureLocationLink" href="https://www.google.com/maps/place/Sossusvlei/@-24.746618,15.2836421,13z/data=!3m1!4b1!4m5!3m4!1s0x1c720c3eabfc5f49:0x9f296da909e19aac!8m2!3d-24.7273906!4d15.3423909" target="_blank" rel="noopener">
+                        Sossusvlei, Namibia
                     </a>
                 </div>
             </div>
